# Libft

./: CMakeLists.txt  Makefile  README.md  ft_bzero.c  ft_count_word.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprime.c  ft_isprint.c  ft_iterative_power.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memrchr.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_ft.c  ft_split_whitespace.c  ft_sqrt.c  ft_strcat.c  ft_strchr.c  (+27 more)
Src/: CMakeLists.txt
